--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "chrome-extension-boilerplate-react-vite",
+  "name": "canger",
   "version": "0.0.1",
-  "description": "chrome extension boilerplate",
-  "license": "MIT",
+  "description": "Canger for learning English",
+  "license": "GPL",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Jonghakseo/chrome-extension-boilerplate-react-vite.git"
+    "url": "https://github.com/ischaojie/canger-extension.git"
   },
   "scripts": {
     "build": "tsc --noEmit && vite build",
