feat: looks like better

--- a/.eslintrc
+++ b/.eslintrc
@@ -29,7 +29,10 @@
   },
   "rules": {
     "react/react-in-jsx-scope": "off",
-    "import/no-unresolved": "off"
+    "import/no-unresolved": "off",
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": 0
+
   },
   "globals": {
     "chrome": "readonly"
