--- a/.github/workflows/auto-assign.yml
+++ b/.github/workflows/auto-assign.yml
@@ -1,4 +1,4 @@
-name: 'Auto Assign'
+name: "Auto Assign"
 on:
   pull_request:
     types: [opened, ready_for_review]
@@ -9,4 +9,4 @@ jobs:
     steps:
       - uses: kentaro-m/auto-assign-action@v1.2.5
         with:
-          configuration-path: '.github/auto_assign.yml'
+          configuration-path: ".github/auto_assign.yml"
