--- a/package.json
+++ b/package.json
@@ -25,9 +25,15 @@
   },
   "type": "module",
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.3",
+    "@geist-ui/core": "^2.3.8",
+    "@tabler/icons-react": "^2.44.0",
     "construct-style-sheets-polyfill": "3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.21.1",
     "webextension-polyfill": "0.10.0"
   },
   "devDependencies": {
@@ -76,8 +82,8 @@
   },
   "prettier": {
     "trailingComma": "all",
-    "semi": true,
-    "singleQuote": true,
+    "semi": false,
+    "singleQuote": false,
     "arrowParens": "avoid",
     "printWidth": 120,
     "bracketSameLine": true,
