feat: some domains can disabled

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "canger",
+  "name": "Canger",
   "version": "0.0.1",
-  "description": "Canger for learning English",
+  "description": "学习英语的好帮手",
   "license": "GPL",
   "repository": {
     "type": "git",
