chore: update readme

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Canger",
+  "name": "canger",
   "version": "0.0.1",
-  "description": "学习英语的好帮手",
+  "description": "随时随地，在潜移默化中掌握英语。",
   "license": "GPL",
   "repository": {
     "type": "git",
