--- a/.github/workflows/build-zip.yml
+++ b/.github/workflows/build-zip.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version-file: ".nvmrc"
+          node-version: "18"
 
       - uses: actions/cache@v3
         with:
