--- a/.eslintrc
+++ b/.eslintrc
@@ -31,8 +31,8 @@
     "react/react-in-jsx-scope": "off",
     "import/no-unresolved": "off",
     "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": 0
-
+    "@typescript-eslint/no-unused-vars": 0,
+    "@typescript-eslint/no-explicit-any": "off"
   },
   "globals": {
     "chrome": "readonly"
