--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "canger",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "随时随地，在潜移默化中掌握英语。",
   "license": "GPL-3.0",
   "repository": {
@@ -31,6 +31,7 @@
     "@geist-ui/core": "^2.3.8",
     "@tabler/icons-react": "^2.44.0",
     "construct-style-sheets-polyfill": "3.1.0",
+    "crypto-js": "^4.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.21.1",
