chore: add sentry

--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.3",
     "@geist-ui/core": "^2.3.8",
-    "@tabler/icons-react": "^2.44.0",
+    "@sentry/browser": "^7.92.0",
+    "@sentry/vite-plugin": "^2.10.2",
+    "@tabler/icons-react": "^2.45.0",
     "construct-style-sheets-polyfill": "3.1.0",
     "crypto-js": "^4.2.0",
     "react": "18.2.0",
