--- a/.github/workflows/build-zip.yml
+++ b/.github/workflows/build-zip.yml
@@ -1,4 +1,4 @@
-name: Build And Upload Extension Zip Via Artifact
+name: Build Extension
 
 on:
   push:
@@ -15,7 +15,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "18"
+          node-version: "latest"
 
       - uses: actions/cache@v3
         with:
