--- a/.eslintrc
+++ b/.eslintrc
@@ -34,7 +34,8 @@
     "@typescript-eslint/no-unused-vars": 0,
     "@typescript-eslint/no-explicit-any": "off",
     "jsx-a11y/anchor-is-valid": 0,
-    "jsx-a11y/click-events-have-key-events": 0
+    "jsx-a11y/click-events-have-key-events": 0,
+    "jsx-a11y/no-static-element-interactions": 0,
   },
   "globals": {
     "chrome": "readonly"
