chore: github actions and commitlint

--- a/.eslintrc
+++ b/.eslintrc
@@ -35,7 +35,7 @@
     "@typescript-eslint/no-explicit-any": "off",
     "jsx-a11y/anchor-is-valid": 0,
     "jsx-a11y/click-events-have-key-events": 0,
-    "jsx-a11y/no-static-element-interactions": 0,
+    "jsx-a11y/no-static-element-interactions": 0
   },
   "globals": {
     "chrome": "readonly"
