--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tabler/icons-react": "^2.45.0",
     "construct-style-sheets-polyfill": "3.1.0",
     "crypto-js": "^4.2.0",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.21.1",
