--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "@sentry/browser": "^7.93.0",
     "@sentry/vite-plugin": "^2.10.2",
     "@tabler/icons-react": "^2.45.0",
+    "animate.css": "^4.1.1",
     "construct-style-sheets-polyfill": "3.1.0",
     "crypto-js": "^4.2.0",
     "moment": "^2.30.1",
     "react": "18.2.0",
+    "react-card-flip": "^1.2.2",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.21.1",
     "webextension-polyfill": "0.10.0"
@@ -91,7 +93,7 @@
     "singleQuote": false,
     "arrowParens": "avoid",
     "printWidth": 120,
-    "bracketSameLine": true,
+    "bracketSameLine": false,
     "htmlWhitespaceSensitivity": "strict",
     "plugins": [
       "prettier-plugin-organize-imports"
