--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@geist-ui/core": "^2.3.8",
     "@sentry/browser": "^7.93.0",
     "@sentry/vite-plugin": "^2.10.2",
@@ -35,6 +36,7 @@
     "animate.css": "^4.1.1",
     "construct-style-sheets-polyfill": "3.1.0",
     "crypto-js": "^4.2.0",
+    "framer-motion": "^10.18.0",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-card-flip": "^1.2.2",
